styles/animations.module.scss
.fadeUp {
  animation-name: fadeUp;
  animation-fill-mode: both;
  animation-delay: 0ms;
  animation-iteration-count: 1;
  -webkit-animation-name: fadeUp;
  -webkit-animation-fill-mode: both;
  -webkit-animation-delay: 0ms;
  -webkit-animation-iteration-count: 1;
}

.slideRight {
  animation-name: slideRight;
  animation-fill-mode: both;
  animation-duration: 500ms;
  animation-delay: 0ms;
  animation-iteration-count: 1;
  -webkit-animation-name: slideRight;
  -webkit-animation-fill-mode: both;
  -webkit-animation-duration: 500ms;
  -webkit-animation-delay: 0ms;
  -webkit-animation-iteration-count: 1;
}

@keyframes slideRight {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: none;
  }
}

@-webkit-keyframes slideRight {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: none;
  }
}

@keyframes fadeUp {
  0% {
    transform: translate3d(0px, 10%, 0px);
    opacity: 0;
  }
  100% {
    transform: none;
    opacity: 1;
  }
}

@-webkit-keyframes fadeUp {
  0% {
    transform: translate3d(0px, 10%, 0px);
    opacity: 0;
  }
  100% {
    transform: none;
    opacity: 1;
  }
}

